--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.usergrid</groupId>
     <artifactId>usergrid-java-client</artifactId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.3</version>
     <packaging>jar</packaging>
     <description>A Java client for Usergrid</description>
     <url>http://usergrid.apache.org</url>
